<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:tag="layout/item_request_0"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dp8"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/selector_filter_option"
        android:orientation="horizontal"
        android:id="@+id/lyFirstVideoMatch"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/earn_3_video_call"
        android:drawableStart="@drawable/gem"
        android:textSize="@dimen/xxx_large_font"
        android:textColor="@color/orange_ff8806"
        android:layout_marginTop="@dimen/mediumMargin"
        android:layout_marginBottom="@dimen/mediumMargin"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/avenir_next_demibold"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:tag="binding_2"
            android:text="@string/your_first_video_match"
            android:textColor="@color/black_normal"
            android:textSize="@dimen/xxx_normal_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textAllCaps="false" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/selector_filter_option"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:id="@+id/lyFirstVoiceMatch"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/earn_3_voice_call"
            android:drawableStart="@drawable/gem"
            android:textSize="@dimen/xxx_large_font"
            android:textColor="@color/orange_ff8806"
            android:layout_marginTop="@dimen/mediumMargin"
            android:layout_marginBottom="@dimen/mediumMargin"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/avenir_next_demibold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:tag="binding_2"
            android:text="@string/firs_voice_match"
            android:textColor="@color/black_normal"
            android:textSize="@dimen/xxx_normal_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textAllCaps="false" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/selector_filter_option"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:id="@+id/lyFirstMatchMatch"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/earn_4_new_match"
            android:drawableStart="@drawable/gem"
            android:textSize="@dimen/xxx_large_font"
            android:textColor="@color/orange_ff8806"
            android:layout_marginTop="@dimen/mediumMargin"
            android:layout_marginBottom="@dimen/mediumMargin"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/avenir_next_demibold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:tag="binding_2"
            android:text="@string/your_first_friend_match"
            android:textColor="@color/black_normal"
            android:textSize="@dimen/xxx_normal_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textAllCaps="false" />

    </LinearLayout>




</LinearLayout>