<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:tag="layout/item_request_0"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/selector_filter_option"
    android:layout_margin="@dimen/dp8"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/earn_strg"
            android:layout_weight="1"
            android:textSize="@dimen/xxx_large_font"
            android:textColor="@color/red_primary"
            android:layout_marginTop="@dimen/mediumMargin"
            android:layout_marginBottom="@dimen/mediumMargin"
            android:layout_marginStart="10dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/avenir_next_demibold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earn_50_evry_day"
            android:drawableStart="@drawable/icon_gem_group_80_48dp"
            android:textSize="@dimen/xxx_large_font"
            android:textColor="@color/orange_ff8806"
            android:layout_marginTop="@dimen/mediumMargin"
            android:layout_marginBottom="@dimen/mediumMargin"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/avenir_next_demibold"
            />

    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mediumMargin"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="6dp">


        <TextView
            android:id="@+id/tvFullnameNewRequest"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:tag="binding_2"
            android:text="@string/check_in_every_day"
            android:textColor="@color/black_normal"
            android:textSize="@dimen/xxx_normal_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textAllCaps="false" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.0"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.54353565" />


        <Button
            android:id="@+id/btnCheckinEveryDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/mediumMargin"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_register_btn_next_selected"
            android:text="@string/check_in"
            android:textAllCaps="false"
            android:textColor="@color/white_normal"
            android:textSize="@dimen/xxx_normal_font"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFullnameNewRequest"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>